<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="pref_key_storage_settings"
        app:title="@string/general">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/prefTemperatureNames"
            app:entryValues="@array/prefTemperatureValues"
            app:key="temperature_unit"
            app:title="@string/temperature_unit"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="pref_key_ram_settings"
        app:title="@string/ram">

        <ListPreference
            app:defaultValue="10000"
            app:entries="@array/prefRamNames"
            app:entryValues="@array/prefRamValues"
            app:key="ram_refreshing"
            app:title="@string/ram_refreshing"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="pref_key_theme_category"
        app:title="@string/pref_theme">

        <ListPreference
            app:defaultValue="default"
            app:dialogTitle="@string/pref_theme_choose"
            app:entries="@array/themeListArray"
            app:entryValues="@array/themeEntryArray"
            app:key="key_theme"
            app:title="@string/pref_theme_choose"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
