<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/hardware"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_hardware"
        android:title="@string/hardware" />

    <item
        android:id="@+id/applications"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_android"
        android:title="@string/applications" />

    <item
        android:id="@+id/processes"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_process"
        android:title="@string/processes" />

    <item
        android:id="@+id/temperature"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_temperature"
        android:title="@string/temp" />

    <item
        android:id="@+id/settings"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>
