<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/menuHardware">

    <fragment
        android:id="@+id/menuHardware"
        android:name="com.galaxyjoy.cpuinfo.feat.infor.FrmInfoContainer"
        android:label="@string/hardware"
        tools:layout="@layout/frm_info" />

    <fragment
        android:id="@+id/menuApplications"
        android:name="com.galaxyjoy.cpuinfo.feat.app.FrmApplications"
        android:label="@string/applications"
        tools:layout="@layout/frm_applications" />

    <fragment
        android:id="@+id/menuProcesses"
        android:name="com.galaxyjoy.cpuinfo.feat.processes.FrmProcesses"
        android:label="@string/processes"
        tools:layout="@layout/frm_processes" />

    <fragment
        android:id="@+id/menuTemperature"
        android:name="com.galaxyjoy.cpuinfo.feat.temp.FrmTemperature"
        android:label="@string/temperature"
        tools:layout="@layout/frm_temperature" />

    <fragment
        android:id="@+id/menuSettings"
        android:name="com.galaxyjoy.cpuinfo.feat.setting.FrmSettings"
        android:label="@string/settings" />

</navigation>
