<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/hardware">

    <fragment
        android:id="@+id/hardware"
        android:name="com.roy93group.cpuinfo.features.information.InfoContainerFragment"
        android:label="@string/hardware"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/applications"
        android:name="com.roy93group.cpuinfo.features.applications.ApplicationsFragment"
        android:label="@string/applications"
        tools:layout="@layout/fragment_applications" />

    <fragment
        android:id="@+id/processes"
        android:name="com.roy93group.cpuinfo.features.processes.ProcessesFragment"
        android:label="@string/processes"
        tools:layout="@layout/fragment_processes" />

    <fragment
        android:id="@+id/temperature"
        android:name="com.roy93group.cpuinfo.features.temperature.TemperatureFragment"
        android:label="@string/temperature"
        tools:layout="@layout/f_temperature" />

    <fragment
        android:id="@+id/settings"
        android:name="com.roy93group.cpuinfo.features.settings.SettingsFragment"
        android:label="@string/settings" />

</navigation>
